--- a/stock-list.html
+++ b/stock-list.html
@@ -13,7 +13,7 @@
   <button onclick="history.back()" class="btn" style="width:auto; padding:8px 14px;">
     ⬅ Back
   </button>
-  <span style="flex:1; text-align:center;">Stock MANAFEMENT</span>
+  <span style="flex:1; text-align:center;">Stock management</span>
 </div>
 
 <!-- CONTENT -->
@@ -41,7 +41,7 @@
   <button onclick="location.href='history.html'">⌛Stats</button>
 </div>
 
-<script type="module" src="script.js"></script>
+<script src="script.js"></script>
 <script>
   renderFilteredStock();
 </script>
