--- a/sell.html
+++ b/sell.html
@@ -34,13 +34,13 @@
 }
 
 #stockList li .item-info small {
-  color: #aaa;
+  color: #f5f1f1;
 }
 
 /* EDIT BUTTON */
 .edit-btn {
   background: #444;
-  color: #fff;
+  color: #f5f5f5;
   border: none;
   padding: 4px 8px;
   border-radius: 6px;
@@ -50,14 +50,14 @@
 
 .edit-btn:hover {
   background: #ff9800;
-  color: #000;
+  color: #3b3838;
 }
 </style>
 </head>
 
 <body>
 
-<div class="shop-nav">stock management</div>
+<div class="shop-nav">Stock Management</div>
 
 <div style="padding:20px; max-width:700px; margin:auto; padding-bottom:200px;">
 
@@ -128,6 +128,11 @@ import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/fi
 
 onAuthStateChanged(auth, (user) => {
   if (!user) window.location.href = "login.html";
+});
+
+// Ensure stock populates after page load
+document.addEventListener("DOMContentLoaded", () => {
+  if (document.getElementById("stockList")) populateSell();
 });
 </script>
 
