--- a/sell.html
+++ b/sell.html
@@ -9,7 +9,7 @@
 <style>
 /* =================== SELL PAGE STYLES =================== */
 #stockList li {
-  background: #232323;
+  background: #3d636d;
   padding: 15px;
   border-radius: 12px;
   margin-bottom: 10px;
