it is now cloud based

--- a/add.html
+++ b/add.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<div class="shop-nav">stock management</div>
+<div class="shop-nav">Stock Management</div>
 
-<div style="padding: 20px; max-width:500px; margin:auto;">
+<div style="padding:20px; max-width:500px; margin:auto;">
 
   <input type="text" id="productName" placeholder="Product Name">
 
@@ -47,6 +47,8 @@
   <button onclick="location.href='history.html'">⌛Stats</button>
 </div>
 
-<script src="script.js"></script>
+<!-- CLOUD REALTIME LOGIC -->
+<script type="module" src="script.js"></script>
+
 </body>
 </html>
