--- a/stock-list.html
+++ b/stock-list.html
@@ -13,7 +13,7 @@
   <button onclick="history.back()" class="btn" style="width:auto; padding:8px 14px;">
     ⬅ Back
   </button>
-  <span style="flex:1; text-align:center;">Stock management</span>
+  <span style="flex:1; text-align:center;">Stock Management</span>
 </div>
 
 <!-- CONTENT -->
@@ -41,36 +41,8 @@
   <button onclick="location.href='history.html'">⌛Stats</button>
 </div>
 
-<script src="script.js"></script>
-<script>
-  renderFilteredStock();
-</script>
-
-<script type="module">
-import { auth } from "./firebase.js";
-import { onAuthStateChanged }
-from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-  }
-});
-</script>
-
-<script type="module">
-import { auth } from "./firebase.js";
-import { onAuthStateChanged }
-from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-  }
-});
-</script>
-
+<!-- CLOUD REALTIME SCRIPT -->
+<script type="module" src="script.js"></script>
 
 </body>
 </html>
-   
