it is now cloud based

--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@ button:hover {
   <button onclick="login()">Login</button>
 </div>
 
-<script type="module" src="firebase.js"></script>
+<!-- Only login.js is needed -->
 <script type="module" src="login.js"></script>
 
 </body>
